--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".Uyg1Activity" android:label="@string/uyg1_name"></activity>
+        <activity android:name=".Uyg2Activity" android:label="@string/uyg2_name"></activity>
     </application>
 
 </manifest>
