--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".Uyg5Activity" android:label="@string/uyg5_name"></activity>
         <activity android:name=".Uyg6Activity" android:label="@string/uyg6_name"></activity>
         <activity android:name=".Uyg7Activity" android:label="@string/uyg7_name"></activity>
+        <activity android:name=".Uyg8Activity" android:label="@string/uyg8_name"></activity>
     </application>
 
 </manifest>
